assets/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@page {
	size: auto;
	margin: 0mm;
}

.task-list-item::before {
	@apply hidden;
}

.task-list-item {
	@apply list-none;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
	html:focus-within {
		scroll-behavior: auto;
	}

	*,
	*::before,
	*::after {
		animation-duration: 0.01ms !important;
		animation-iteration-count: 1 !important;
		transition-duration: 0.01ms !important;
		scroll-behavior: auto !important;
	}
}

::selection {
	@apply bg-nfh-accent-secondary;
}

/* Scrollbar */

/* Chrome */
::-webkit-scrollbar {
	width: 8px;
	height: 8px;
}

::-webkit-scrollbar-track {
	@apply bg-nfh-accent-primary;
}

::-webkit-scrollbar-thumb {
	@apply rounded-full bg-nfh-accent-primary transition-colors hover:bg-nfh-accent-primary;
}

/* Firefox */
* {
	scrollbar-width: 'thin';
	scrollbar-color: theme('colors.nfh-accent-primary') theme('colors.transparent');
}

kbd {
	font-family: monospace;
	background: var(--a2);
	padding: calc(var(--unit) * 0.5);
	border-radius: calc(var(--unit) * 0.5);
}

@layer base {
	[data-theme='light'] #u-photo {
		background-image: url('/images/others/me-alt.png');
	}
	[data-theme='hackernews'] #u-photo {
		background-image: url('/images/others/me-alt.png');
	}
	[data-theme='latte'] #u-photo {
		background-image: url('/images/others/me-alt.png');
	}
	[data-theme='rosépinedawn'] #u-photo {
		background-image: url('/images/others/me-alt.png');
	}
	[data-theme='dark'] #u-photo {
		background-image: url('/images/others/me.png');
	}
	[data-theme='dracula'] #u-photo {
		background-image: url('/images/others/me.png');
	}
	[data-theme='mocha'] #u-photo {
		background-image: url('/images/others/me.png');
	}
	[data-theme='rosépine'] #u-photo {
		background-image: url('/images/others/me.png');
	}
	[data-theme='wildberries'] #u-photo {
		background-image: url('/images/others/me.png');
	}
	[data-theme='nord'] #u-photo {
		background-image: url('/images/others/me.png');
	}

	[data-theme='light'] {
		--background-primary: theme('colors.light.background-primary');
		--background-secondary: theme('colors.light.background-secondary');
		--text-primary: theme('colors.light.text-primary');
		--text-secondary: theme('colors.light.text-secondary');
		--accent-primary: theme('colors.light.accent-primary');
		--accent-secondary: theme('colors.light.accent-secondary');
	}

	[data-theme='dark'] {
		--background-primary: theme('colors.dark.background-primary');
		--background-secondary: theme('colors.dark.background-secondary');
		--text-primary: theme('colors.dark.text-primary');
		--text-secondary: theme('colors.dark.text-secondary');
		--accent-primary: theme('colors.dark.accent-primary');
		--accent-secondary: theme('colors.dark.accent-secondary');
	}

	[data-theme='hackernews'] {
		--background-primary: theme('colors.hackerNews.background-primary');
		--background-secondary: theme('colors.hackerNews.background-secondary');
		--text-primary: theme('colors.hackerNews.text-primary');
		--text-secondary: theme('colors.hackerNews.text-secondary');
		--accent-primary: theme('colors.hackerNews.accent-primary');
		--accent-secondary: theme('colors.hackerNews.accent-secondary');
	}

	[data-theme='latte'] {
		--background-primary: theme('colors.latte.background-primary');
		--background-secondary: theme('colors.latte.background-secondary');
		--text-primary: theme('colors.latte.text-primary');
		--text-secondary: theme('colors.latte.text-secondary');
		--accent-primary: theme('colors.latte.accent-primary');
		--accent-secondary: theme('colors.latte.accent-secondary');
	}

	[data-theme='rosépinedawn'] {
		--background-primary: theme('colors.roséPineDawn.background-primary');
		--background-secondary: theme('colors.roséPineDawn.background-secondary');
		--text-primary: theme('colors.roséPineDawn.text-primary');
		--text-secondary: theme('colors.roséPineDawn.text-secondary');
		--accent-primary: theme('colors.roséPineDawn.accent-primary');
		--accent-secondary: theme('colors.roséPineDawn.accent-secondary');
	}

	[data-theme='dracula'] {
		--background-primary: theme('colors.dracula.background-primary');
		--background-secondary: theme('colors.dracula.background-secondary');
		--text-primary: theme('colors.dracula.text-primary');
		--text-secondary: theme('colors.dracula.text-secondary');
		--accent-primary: theme('colors.dracula.accent-primary');
		--accent-secondary: theme('colors.dracula.accent-secondary');
	}

	[data-theme='mocha'] {
		--background-primary: theme('colors.mocha.background-primary');
		--background-secondary: theme('colors.mocha.background-secondary');
		--text-primary: theme('colors.mocha.text-primary');
		--text-secondary: theme('colors.mocha.text-secondary');
		--accent-primary: theme('colors.mocha.accent-primary');
		--accent-secondary: theme('colors.mocha.accent-secondary');
	}

	[data-theme='rosépine'] {
		--background-primary: theme('colors.roséPine.background-primary');
		--background-secondary: theme('colors.roséPine.background-secondary');
		--text-primary: theme('colors.roséPine.text-primary');
		--text-secondary: theme('colors.roséPine.text-secondary');
		--accent-primary: theme('colors.roséPine.accent-primary');
		--accent-secondary: theme('colors.roséPine.accent-secondary');
	}

	[data-theme='wildberries'] {
		--background-primary: theme('colors.wildberries.background-primary');
		--background-secondary: theme('colors.wildberries.background-secondary');
		--text-primary: theme('colors.wildberries.text-primary');
		--text-secondary: theme('colors.wildberries.text-secondary');
		--accent-primary: theme('colors.wildberries.accent-primary');
		--accent-secondary: theme('colors.wildberries.accent-secondary');
	}

	[data-theme='nord'] {
		--background-primary: theme('colors.nord.background-primary');
		--background-secondary: theme('colors.nord.background-secondary');
		--text-primary: theme('colors.nord.text-primary');
		--text-secondary: theme('colors.nord.text-secondary');
		--accent-primary: theme('colors.nord.accent-primary');
		--accent-secondary: theme('colors.nord.accent-secondary');
	}
}

